crates/tests/libs/bindgen/data/error/link_missing_name/input.rdl

#[win32]
mod Test {
    #[library]
    extern fn F();
}
        